<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.oliverbotello.employeslocation.employees.detail.EmployeeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInptLyt_EmployeeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/standar_padding"
            android:layout_marginHorizontal="@dimen/standar_padding"
            android:hint="@string/hint_name"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            android:enabled="@{viewModel.editable}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInptEdtTxt_EmployeeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInptLyt_EmployeeEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInptLyt_EmployeeName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/standar_padding"
            android:layout_marginHorizontal="@dimen/standar_padding"
            android:hint="@string/hint_email"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            android:enabled="@{viewModel.editable}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInptEdtTxt_EmployeeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtrlBtn_SaveEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtInptLyt_EmployeeEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save_button"
            android:onClick="@{() -> viewModel.saveEmployee()}"
            android:enabled="@{viewModel.editable}"
            style="?attr/materialButtonOutlinedStyle"/>

        <TextView
            android:id="@+id/txtVw_EmployeeCoordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtrlBtn_SaveEmployee"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/standar_padding"
            android:text="@{viewModel.location.toString()}"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mpVw_EmployeeLocation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtVw_EmployeeCoordinates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
